# Apiary-SDK

./: README.md
docs/: FEATURE_DATA_REQUEST.md  GAP_ANALYSIS_BACKLOG.md  PRODUCT.md  index.md
docs/guide/: activity-feed.md  activity-log.md  activity-logger.md  agent-authentication.md  agent-heartbeat-lifecycle.md  agent-registration-api.md  agent-sdk-use-cases.md  agents-dashboard.md  api-versioning.md  ci-cd.md  dashboard-home.md  (+17 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py  service_worker_example.py  worker_agent.py
sdk/python/src/apiary_sdk/: __init__.py  client.py  exceptions.py  large_result.py  models.py  service_worker.py  streaming.py
sdk/python/src/apiary_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/src/apiary_sdk/workers/: __init__.py  github.py  gmail.py  http.py  jira.py  sheets.py  slack.py  sql.py
sdk/python/src/superpos_sdk/: __init__.py  async_client.py  client.py  constants.py
sdk/python/src/superpos_sdk/resources/: knowledge.py
sdk/python/src/superpos_sdk/workers/: github.py
sdk/python/tests/: conftest.py  test_agents.py  test_channels.py  test_client.py  test_constants.py  test_event_polling.py  test_knowledge.py  test_knowledge_graph.py  test_large_result.py  test_persona.py  test_service_catalog.py  test_service_worker.py  test_streaming.py  test_tasks.py  test_workflows.py
sdk/python/tests/test_workers/: __init__.py  test_github_worker.py  test_gmail_worker.py  test_http_worker.py  test_jira_worker.py  test_sheets_worker.py  test_slack_worker.py  test_sql_worker.py
(+207 files in other folders)
